tests/front_end/input/type_errors/pointer_from_int.wl
//E<5:9>: Indirection level mismatch (1 vs 0)
int main() {
    int result = 0;
    int *ptr = &result;
    ptr = result;
    return result;
}